--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,17 @@
 plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.kotlin.android)
+    alias(libs.plugins.google.services)
 }
 
 android {
     namespace 'dev.rulim34.simplefirebase'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "dev.rulim34.simplefirebase"
-        minSdk 21
-        targetSdk 34
+        minSdk 23
+        targetSdk 35
         versionCode 1
         versionName "1.0"
 
@@ -33,13 +34,23 @@ android {
 }
 
 dependencies {
-
-    implementation libs.androidx.core.ktx
-    implementation libs.androidx.appcompat
-    implementation libs.material
+    implementation(platform(libs.firebase.bom))
     implementation libs.androidx.activity
+    implementation libs.androidx.appcompat
+    implementation libs.androidx.core.ktx
     implementation libs.androidx.constraintlayout
+    implementation libs.androidx.credentials
+    implementation libs.androidx.credentials.play.services.auth
+    implementation libs.androidx.navigation.dynamic.features.fragment
+    implementation libs.androidx.navigation.fragment
+    implementation libs.androidx.navigation.runtime.ktx
+    implementation libs.androidx.navigation.ui
+    implementation libs.firebase.auth
+    implementation libs.firebase.firestore
+    implementation libs.googleid
+    implementation libs.material
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
+    androidTestImplementation libs.androidx.navigation.testing
 }
